# ai_search_tutorial

./: .env  config.py  helper.py  logger.py  main.py  pyproject.toml  system_prompt.st
services/: azure_ai_search.py  azure_openai.py
