[project]
name = "ai-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-search-documents>=11.5.3",
    "loguru>=0.7.3",
    "openai>=1.98.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
